[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simba"
version = "0.0.1"
authors = [
  { name="Cameron Abel", email="cameronabel@gmail.com" },
]
description = "Simulation assistant for use on Warmane"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
simba = "simba.simba:main"

[project.urls]
Homepage = "https://github.com/cameronabel/simba"
Issues = "https://github.com/cameronabel/simba/issues"